burger menu spacing fix

--- a/Components/NavigationBurger/Partials/_menu.scss
+++ b/Components/NavigationBurger/Partials/_menu.scss
@@ -36,7 +36,8 @@
     display: block;
     font-size: 2.35rem;
     font-weight: 400;
-    padding: 12px $spacing-small;
+    margin: 0;
+    padding: $spacing-small $spacing-large;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
