--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -161,6 +161,10 @@ img {
 figcaption {
   font-size: 1rem;
   margin-top: $spacing-small;
+
+  @media (max-width: $breakpoint-tablet-horizontal) {
+    margin-bottom: $spacing-small;
+  }
 }
 
 code {
